Expand Checkstyle rules and refactor Quote value objects (#19)
* Expand Checkstyle rules for imports, naming, and structure.

Enforce unused imports, naming conventions, and common structural checks in CI via make lint and verify.

* Refactor Quote into value objects and tighten ParameterNumber.

Group applicant, coverage, and audit fields into domain records so constructors stay within Checkstyle limits.